Refactored DetailsPartial and added Company Name display to OrderDetails Index

--- a/Northwind.Application/Views/Product/Details.cshtml
+++ b/Northwind.Application/Views/Product/Details.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
     ViewData["ControllerName"] = "Product";
+    ViewData["Id"] = ViewBag.Id;
 }
 
 <h1>Details</h1>
