--- a/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
@@ -31,7 +31,7 @@
         @foreach (var item in Model)
         {
             <div class="col p-3" style="text-align: center">
-                <div style="cursor:pointer" onclick="location.href = '@GetDetailsLink(GetId(item))'">
+                <div style="cursor:pointer;height:130px;" onclick="location.href = '@GetDetailsLink(GetId(item))'">
                     <img src="data:image/bmp;base64,@Convert.ToBase64String(GetPropertyValue<byte[]>(item, "Picture", "Photo", "Image") as byte[] ?? new byte[0])" style="height:120px;width:120px;" />
                 </div>
                 <div class="text-xl-center fw-bold m-2">
@@ -44,3 +44,11 @@
         }
     </div>
 </form>
+
+<style>
+    img:hover
+    {
+        height:130px !important;
+        width:130px !important;
+    }
+</style>
