Added style which enlarges Category images on tap

--- a/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
@@ -46,7 +46,7 @@
 </form>
 
 <style>
-    img:hover
+    img:hover, img:active
     {
         height:130px !important;
         width:130px !important;
