--- a/Northwind.Application/Views/Shared/_DetailsPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_DetailsPartial.cshtml
@@ -9,11 +9,12 @@
 }
 
 @functions {
-    string ControllerName => ViewData["ControllerName"].ToString().SplitForUpperCase(Model);
+    string ControllerName => ViewData["ControllerName"].ToString();
     PropertyInfo[] Properties => Model.GetType().GetProperties();
     string IdName => Properties.First(x => x.Name.Contains(ControllerName) && x.Name.Contains("Id")).Name;
     object? IdValue => Properties.First(x => x.Name.Contains(ControllerName) && x.Name.Contains("Id")).GetValue(Model);
-    string Disabled => User.IsInRole("admin") ? "" : "disabled";
+    bool IsAdmin => User.IsInRole("admin");
+    bool IsCustomer => User.IsInRole("customer");
 
     string GetNames(Type type, object value)
     {
@@ -96,7 +97,12 @@
     </dl>
 </div>
 
-<button class="btn btn-primary fw-bold" @Disabled onclick="location.href = '@Url.ActionLink("Edit", ControllerName, new { id = IdValue })'">Edit</button>
+<button class="btn btn-primary fw-bold" @(IsAdmin ? "" : "disabled") onclick="location.href = '@Url.ActionLink("Edit", ControllerName, new { id = IdValue })'">Edit</button>
+
+@if (ControllerName == "Product")
+{
+    <button class="btn btn-primary fw-bold" @(IsCustomer || IsAdmin ? "" : "disabled") onclick="location.href = '@Url.ActionLink("Create", "Order")'" style="margin-left:10px;">Order</button>
+}
 
 @if (ViewData["PreviousPage"] != null)
 {
