--- a/Northwind.Application/Views/Product/Details.cshtml
+++ b/Northwind.Application/Views/Product/Details.cshtml
@@ -6,7 +6,6 @@
     ViewData["Id"] = ViewBag.Id;
 }
 
-<h1>Details</h1>
-<h4>Product</h4>
+<h1>Product Details</h1>
 
 @await Html.PartialAsync("_DetailsPartial", Model, ViewData)
