--- a/Northwind.Application/Views/Roles/Edit.cshtml
+++ b/Northwind.Application/Views/Roles/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@model Northwind.Application.Models.Roles.ChangeRoleViewModel
+@model Northwind.Application.Models.Roles.RoleChangeModel
 
 <h2>Change role for user: @Model.UserEmail</h2>
 
