--- a/Northwind.Application/Views/Roles/UserList.cshtml
+++ b/Northwind.Application/Views/Roles/UserList.cshtml
@@ -1,14 +1,38 @@
-﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
+﻿@model IEnumerable<Northwind.Application.Models.Roles.UserIndexModel>
 
 <h2>User List</h2>
 <table class="table">
-    @foreach (var user in Model)
-    {
+    <thead>
         <tr>
-            <td>@user.Email</td>
-            <td>
-                <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-userid="@user.Id">Change Role</a>
-            </td>
+            <th>
+                User Name
+            </th>
+            <th>
+                Roles
+            </th>
+            <th>
+            </th>
         </tr>
-    }
+    </thead>
+    <tbody>
+        @foreach (var user in Model)
+        {
+            <tr>
+                <td>@user.UserName</td>
+                <td>
+                    <ul>
+                        @foreach (var roleName in user.RoleNames ?? Enumerable.Empty<string>())
+                        {
+                            <li>
+                                @roleName
+                            </li>
+                        }
+                    </ul>
+                </td>
+                <td class="align-content-center">
+                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-userid="@user.Id">Change Role</a>
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
