--- a/Northwind.Application/Views/Customers/Details.cshtml
+++ b/Northwind.Application/Views/Customers/Details.cshtml
@@ -5,7 +5,7 @@
     ViewData["ControllerName"] = "Customers";
 }
 
-<h1>Details</h1>
-<h4>Customer</h4>
+<h1>Details Customer</h1>
+<hr />
 
 @await Html.PartialAsync("_DetailsPartial", Model, ViewData)
