--- a/Northwind.Application/Views/Customers/Edit.cshtml
+++ b/Northwind.Application/Views/Customers/Edit.cshtml
@@ -3,8 +3,7 @@
     ViewData["ControllerName"] = "Customers";
 }
 
-<h1>Edit</h1>
-<h4>Customer</h4>
+<h1>Edit Customer</h1>
 <hr />
 
 @await Html.PartialAsync("_EditFormPartial", Model)
