--- a/Northwind.Application/Views/OrderDetails/Index.cshtml
+++ b/Northwind.Application/Views/OrderDetails/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["ActionName"] = "Delete";
 }
 
-<h1>@(ViewBag.CompanyName) Order Details</h1>
+<h1>"@(ViewBag.CompanyName)" Order Details</h1>
 
 @await Html.PartialAsync("_IndexButtonsPartial", ViewData)
 
