--- a/Northwind.Application/Views/Orders/Create.cshtml
+++ b/Northwind.Application/Views/Orders/Create.cshtml
@@ -4,9 +4,7 @@
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
 }
 
-<h1>Create</h1>
-
-<h4>Order</h4>
+<h1>Create new Order</h1>
 <hr />
 
 @await Html.PartialAsync("_CreateFormPartial", Model)
