--- a/Northwind.Application/Views/Products/Edit.cshtml
+++ b/Northwind.Application/Views/Products/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewData["ControllerName"] = "Products";
 }
 
-<h1>Edit Product @Model.ProductName</h1>
+<h1>Edit Product "@Model.ProductName"</h1>
 <hr />
 
 @await Html.PartialAsync("_EditFormPartial", Model)
