--- a/Northwind.Application/Views/Customers/Create.cshtml
+++ b/Northwind.Application/Views/Customers/Create.cshtml
@@ -3,9 +3,7 @@
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
 }
 
-<h1>Create</h1>
-
-<h4>Customer</h4>
+<h1>Create new Customer</h1>
 <hr />
 
 @await Html.PartialAsync("_CreateFormPartial", new Northwind.Application.Models.Customer.CustomerCreateModel())
