--- a/Northwind.Application/Views/Employees/Delete.cshtml
+++ b/Northwind.Application/Views/Employees/Delete.cshtml
@@ -9,8 +9,7 @@
     var count = Model.Count();
 }
 
-<h1>Are you sure you want to delete @(count > 1 ? "these" : "this")</h1>
-<h4>@(count > 1 ? "Employees" : "Employee")?</h4>
+<h1>Are you sure you want to delete @(count > 1 ? "these" : "this") @(count > 1 ? "Employees" : "Employee")?</h1>
 <hr />
 
 @await Html.PartialAsync("_TableFormPartial")
