--- a/Northwind.Application/Views/OrderDetails/Delete.cshtml
+++ b/Northwind.Application/Views/OrderDetails/Delete.cshtml
@@ -9,8 +9,7 @@
     var count = Model.Count();
 }
 
-<h1>Are you sure you want to delete @(count > 1 ? "these" : "this")</h1>
-<h1>@(count > 1 ? "OrderDetails" : "OrderDetail")?</h1>
+<h1>Are you sure you want to delete @(count > 1 ? "these" : "this") @(count > 1 ? "OrderDetails" : "OrderDetail")?</h1>
 <hr />
 
 @await Html.PartialAsync("_TableFormPartial")
