--- a/Northwind.Application/Views/Roles/Edit.cshtml
+++ b/Northwind.Application/Views/Roles/Edit.cshtml
@@ -4,15 +4,72 @@
 <h2>Change role for user: @Model.UserEmail</h2>
 
 <form asp-action="Edit" method="post">
-    <input type="hidden" name="userId" value="@Model.UserId" />
-    <div class="form-group">
+    <input type="hidden" name="UserId" value="@Model.UserId" />
+
+    <table class="table">
         @foreach (IdentityRole role in Model.AllRoles)
         {
-            <input type="checkbox" name="roles" value="@role.Name"
-            @(Model.UserRoles.Contains(role.Name!) ? "checked=\"checked\"" : "") />
-
-            @role.Name <br />
+            <tr>
+                <td style="width:1rem;">
+                    <input type="checkbox" id="@role.Name" name="UserRoles" value="@role.Name" @(Model.UserRoles.Contains(role.Name!) ? "checked" : "") />
+                </td>
+                <td>
+                    @role.Name
+                </td>
+                <td>
+                    @if (role.Name == "customer")
+                    {
+                        <select id="customerSelectList" class="form-select" name="CustomerId">
+                            @foreach (var option in Model.CustomerList! as SelectList)
+                            {
+                                if (option.Selected)
+                                {
+                                    <option value="@option.Value" selected>@option.Text</option>
+                                }
+                                else
+                                {
+                                    <option value="@option.Value">@option.Text</option>
+                                }
+                            }
+                        </select>
+                    }
+                </td>
+            </tr>
         }
+    </table>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Save</button>
+        <a asp-action="UserList" class="float-end fw-bold btn btn-primary">Back</a>
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
+    
 </form>
+
+<script type="text/javascript">
+    const customerCheckBox = document.getElementById('customer');
+    const customerSelectList = document.getElementById('customerSelectList');
+
+    if (!customerCheckBox.checked) {
+        customerSelectList.value = null;
+        customerSelectList.hidden = true;
+    }
+
+    customerCheckBox.addEventListener('change', (event) => {
+        const checked = event.target.checked;        
+        const firstOptionValue = customerSelectList.getElementsByTagName('option')[0].value;
+
+        if (checked === true) {
+            customerSelectList.value = firstOptionValue;
+            customerSelectList.hidden = false;
+        }
+        else {
+            customerSelectList.value = null;
+            customerSelectList.hidden = true;
+        }
+    });
+</script>
+
+<style>
+    td {
+        align-content:center;
+    }
+</style>
