Designed reactive customer selectList for Orders

--- a/Northwind.Application/Views/Orders/Details.cshtml
+++ b/Northwind.Application/Views/Orders/Details.cshtml
@@ -5,6 +5,6 @@
     ViewData["ControllerName"] = "Orders";
 }
 
-<h1>Order Details</h1>
+<h1>Order</h1>
 
 @await Html.PartialAsync("_DetailsPartial", Model, ViewData)
