--- a/Northwind.Application/Views/Products/Index.cshtml
+++ b/Northwind.Application/Views/Products/Index.cshtml
@@ -7,7 +7,7 @@
     ViewData["Id"] = ViewBag.Id;
 }
 
-<h1>@(ViewBag.CategoryName) product list</h1>
+<h1>"@(ViewBag.CategoryName)" Product List</h1>
 
 @await Html.PartialAsync("_IndexButtonsPartial", ViewData)
 
