--- a/Northwind.Application/Views/Orders/Index.cshtml
+++ b/Northwind.Application/Views/Orders/Index.cshtml
@@ -7,13 +7,38 @@
     ViewData["Id"] = ViewBag.Id;
 }
 
-<h1>@(ViewBag.CompanyName) order list</h1>
+<h1>"@ViewBag.CompanyName" Order List</h1>
+
+@if (User.IsInRole("admin"))
+{
+    <div class="pb-3 pt-3" style="max-width:500px;">
+        <select onchange="onCustomerSelectListChange(value)" class="form-select">
+            @foreach (var option in Model.CustomerList)
+            {
+                if (option.Selected)
+                {
+                    <option value="@option.Value" selected>@option.Text</option>
+                }
+                else
+                {
+                    <option value="@option.Value">@option.Text</option>
+                }
+            }
+        </select>
+    </div>
+}
 
 @await Html.PartialAsync("_IndexButtonsPartial", ViewData)
 
 @if (Model.Orders.Any())
 {
     @await Html.PartialAsync("_TableFormPartial", Model.Orders, ViewData)
+
+    if (ViewData["Id"] != null)
+    {
+        <button class="btn btn-primary fw-bold" onclick="location.href = 'Customers/Details/@(ViewData["Id"])'">To Customer</button>
+    }
+    
     <page-link page-model="Model.PageViewModel" page-action="Index" class="float-end"></page-link>
 }
 else
@@ -24,3 +49,9 @@ else
         <button class="btn btn-primary fw-bold" onclick="location.href = '@ViewData["PreviousPage"]'">Back</button>
     }
 }
+
+<script>
+    function onCustomerSelectListChange(value) {
+        window.location.href = `Orders?customerId=${value}`;
+    }
+</script>
