--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Northwind.Application.Constants
+@{
     ViewData["Title"] = "Northwind";
 }
 
@@ -28,19 +29,29 @@
                     <ul class="navbar-nav flex-grow-1">
                         @if (User.IsInRole("admin"))
                         {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Employees" asp-action="Index">Employees</a>
+                            </li>                            
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Customers" asp-action="Index">Customers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Products</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index">Orders</a>
+                            </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
+                            <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Catalogue</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
-                        </li>
+                        @if (User.IsInRole("customer") && !User.IsInRole("admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Orders" asp-route-customerId="@Context.Session.GetString(SessionValues.CustomerId)" asp-action="Index">Your Orders</a>
+                            </li>
+                        }
+
                     </ul>
                     <ul class="navbar-nav float-end">
                         <li>
