--- a/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
@@ -116,7 +116,7 @@
     </table>
 </div>
 
-@if (ViewData["PreviousPage"] != null)
+@* @if (ViewData["PreviousPage"] != null && User.IsInRole("admin"))
 {
     <button class="btn btn-primary fw-bold" onclick="location.href = '@ViewData["PreviousPage"]'">Back</button>
-}
+} *@
